@@ -7,9 +7,10 @@ libgdbmi_a_SOURCES= \
 gdbmi_grammar.y \
 gdbmi_lexer.l \
 gdbmi_pt.c \
+gdbmi_oc.c \
 gdbmi_parser.c
 
-EXTRA_DIST = gdbmi_parser.h  gdbmi_pt.h gdbmi_grammar.h
+EXTRA_DIST = gdbmi_parser.h  gdbmi_pt.h gdbmi_grammar.h gdbmi_oc.h
 
 # gdbmi driver program
 noinst_bin_PROGRAMS = gdbmi_driver
@@ -18,10 +19,4 @@ noinst_bindir = $(top_builddir)/progs
 gdbmi_driver_LDFLAGS = -L.
 gdbmi_driver_LDADD = -lgdbmi
 gdbmi_driver_SOURCES = gdbmi_driver.c
-#gdbmi_driver_DEPENDENCIES = $(top_srcdir)/src/mi_oc_parser
-#
-
-#mi_oc_parser_LDFLAGS=-L.
-#mi_oc_parser_LDADD=-lmi_oc_parser
-#mi_oc_parser_SOURCES=mi_oc_driver.c
-#mi_oc_parser_CFLAGS=$(AM_CLFAGS)
+gdbmi_driver_DEPENDENCIES = $(top_builddir)/src
