@@ -3,6 +3,7 @@
 #include <string.h>
 
 #include "gdbmi_pt.h"
+#include "gdbmi_oc.h"
 #include "gdbmi_parser.h"
 
 static void
@@ -18,6 +19,7 @@ main (int argc, char **argv)
 {
   gdbmi_parser_ptr parser_ptr;
   gdbmi_output_ptr output_ptr;
+  gdbmi_oc_ptr oc_ptr;
   int result, parse_failed;
 
   if (argc != 2)
@@ -36,6 +38,7 @@ main (int argc, char **argv)
 
   if (parse_failed)
     {
+      output_ptr = NULL;
       if (result == -1)
 	{
 	  fprintf (stderr, "%s:%d", __FILE__, __LINE__);
@@ -44,15 +47,17 @@ main (int argc, char **argv)
     }
   else
     {
+      /* Print the parse tree for testing purposes. */
       print_gdbmi_output (output_ptr);
-    }
 
-  if (parse_failed)
-    {
-      output_ptr = NULL;
-    }
-  else
-    {
+      /* Turn the parse tree into an MI output command. */
+      result = gdbmi_get_output_commands (output_ptr, &oc_ptr);
+      if (result == -1)
+        {
+	  fprintf (stderr, "%s:%d", __FILE__, __LINE__);
+	  return -1;
+	}
+
       if (destroy_gdbmi_output (output_ptr) == -1)
 	{
 	  fprintf (stderr, "%s:%d", __FILE__, __LINE__);
